--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<img src="payday2_logo.png" />
 			<h1>Package Locations</h1>
 		</header>
-		<nav class="frame">
+		<nav class="frame small">
 			<ul>
 				<li>
 					<span>Bain</span>
@@ -131,16 +131,6 @@
 						<li data-map="33">Nightclub</li>
 						<li data-map="34">Ukrainian Job</li>
 						<li data-map="39">White Xmas</li>
-					</ul>
-				</li>
-				<li>
-					<span>Escapes</span>
-					<ul>
-						<li data-map="11">Cafe</li>
-						<li data-map="12">Garage</li>
-						<li data-map="35">Overpass</li>
-						<li data-map="36">Park</li>
-						<li data-map="37">Street</li>
 					</ul>
 				</li>
 			</ul>
