Expand First <ul> as standard

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<ul>
 				<li>
 					<span>Bain</span>
-					<ul>
+					<ul style="display:block;">
 						<li>
 							<span class="dlc">Armored Transport</span>
 							<ul>
@@ -43,7 +43,7 @@
 				</li>
 				<li>
 					<span>Hector</span>
-					<ul>
+					<ul style="display:block;">
 						<li>
 							<span>Firestarter</span>
 							<ul>
@@ -70,7 +70,7 @@
 				</li>
 				<li>
 					<span>The Butcher</span>
-					<ul>
+					<ul style="display:block;">
 						<li>
 							<span class="dlc">The Bomb</span>
 							<ul>
@@ -82,7 +82,7 @@
 				</li>
 				<li>
 					<span>The Dentist</span>
-					<ul>
+					<ul style="display:block;">
 						<li data-map="20" class="dlc">Big Bank</li>
 						<li>
 							<span class="dlc">Hotline Miami</span>
@@ -97,7 +97,7 @@
 				</li>
 				<li>
 					<span>The Elephant</span>
-					<ul>
+					<ul style="display:block;">
 						<li>
 							<span>Big Oil</span>
 							<ul>
@@ -125,7 +125,7 @@
 				</li>
 				<li>
 					<span>Vlad</span>
-					<ul>
+					<ul style="display:block;">
 						<li data-map="31">Four Stores</li>
 						<li data-map="32">Mallcrasher</li>
 						<li data-map="33">Nightclub</li>
